--- a/Ritsumeikan_BKC_Campus_Map_App_Promotion.html
+++ b/Ritsumeikan_BKC_Campus_Map_App_Promotion.html
@@ -87,11 +87,11 @@
                 </div>
                 <div class="feature">
                     <h3>GPS機能</h3>
-                    <p>GPSを使用して現在地を確認し、キャンパス内のどの施設にも簡単に道案内します。</p>
+                    <p>GPSを使用して現在地を確認できます。</p>
                 </div>
                 <div class="feature">
                     <h3>施設の詳細</h3>
-                    <p>各施設の開館時間、提供されるサービス、連絡先情報など、詳細な情報にアクセスできます。</p>
+                    <p>各施設の詳細な情報にアクセスできます。</p>
                 </div>
                 <div class="feature">
                     <h3>楽しく魅力的なデザイン</h3>
